--- a/server/static/main.css
+++ b/server/static/main.css
@@ -163,9 +163,9 @@ pre code {
     background-color: white;
 }
 
-#logo {
-    margin-right: 16px;
-}
+/*#logo {*/
+/*    margin-right: 16px;*/
+/*}*/
 
 .header-inner {
     padding-left: 16px;
