--- a/server/templates/common/popups/code.html
+++ b/server/templates/common/popups/code.html
@@ -17,6 +17,7 @@
                     <div>
                         <label>
                             Choose files<br>
+                            <!--suppress HtmlUnknownAttribute -->
                             <input id="code-folder" type="file" webkitdirectory required>
                         </label>
                     </div>
