--- a/server/templates/common/popups/help.html
+++ b/server/templates/common/popups/help.html
@@ -6,7 +6,8 @@
             <div>
                 <div>
                     <h1>Issues or questions?</h1>
-                    Open issue on <a href="{{git}}" target="_blank">{{git}}</a>
+                    Open issue on <!--suppress HtmlUnknownTarget -->
+                    <a href="{{git}}" target="_blank">{{git}}</a>
                 </div>
 
                 <div>
