escape jinja user name

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -57,7 +57,7 @@
 
         <div class="sidebar-footer">
             <div id="sidebar-username">
-                <i class="gg-profile"></i>&nbsp;{{username}}
+                <i class="gg-profile"></i>&nbsp;{{username | e}}
             </div>
 
             <a class="sidebar-button" href="/logout" id="logout-button"><i class="gg-log-out"></i></a>
