add more naming options

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="/static/js/app.css">
     <link rel="stylesheet" href='/static/main.css'/>
-    <title>{{name}}GPT</title>
+    <title>{{name}}{{name2}}</title>
 </head>
 <body>
 
@@ -18,7 +18,7 @@
             {% block extra_header %}
             {% endblock extra_header %}
             <div class="header-inner">
-                <a href="/" id="logo-link"><strong>{{name}}</strong>GPT</a>
+                <a href="/" id="logo-link"><strong>{{name}}</strong>{{name2}}</a>
             </div>
         </div>
 
