add command-r template

--- a/server/templates/common/popups/settings.html
+++ b/server/templates/common/popups/settings.html
@@ -79,6 +79,7 @@
                         <option value="mixtral" {% if prompt_template=='mixtral' %}selected="selected"{% endif %}>Mixtral</option>
                         <option value="chatml" {% if prompt_template=='chatml' %}selected="selected"{% endif %}>ChatML</option>
                         <option value="alpaca" {% if prompt_template=='alpaca' %}selected="selected"{% endif %}>Alpaca</option>
+                        <option value="command-r" {% if prompt_template=='command-r' %}selected="selected"{% endif %}>Command-R</option>
                     </select>
                 </div>
                 <div class="param-help">
