llama-3 prompt template

--- a/server/templates/common/popups/settings.html
+++ b/server/templates/common/popups/settings.html
@@ -79,6 +79,7 @@
                         <option value="mixtral" {% if prompt_template=='mixtral' %}selected="selected"{% endif %}>Mixtral</option>
                         <option value="chatml" {% if prompt_template=='chatml' %}selected="selected"{% endif %}>ChatML</option>
                         <option value="alpaca" {% if prompt_template=='alpaca' %}selected="selected"{% endif %}>Alpaca</option>
+                        <option value="llama-3" {% if prompt_template=='llama-3' %}selected="selected"{% endif %}>llama-3</option>
                     </select>
                 </div>
                 <div class="param-help">
