--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <div id="history-div">
-            <strong>History</strong>
+<!--            <strong>History</strong>-->
 
             <ul id="history">
             </ul>
