todo line by line almost there

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -72,21 +72,7 @@
 {% block content %}
 <div id="outer-chat">
     <div id="chat"></div>
-    <div id="editor">
-        <h2>Editor</h2>
-        <!-- Editor content here -->
-
-<!--        <h3>Think</h3>-->
-<!--        <textarea id="think" rows="3"></textarea>-->
-
-<!--        <h3>Codecanvas</h3>-->
-<!--        <textarea id="codecanvas" rows="3"></textarea>-->
-
-<!--        <h3>Output</h3>-->
-<!--        <textarea id="text" rows="3"></textarea>-->
-
-
-    </div>
+    <div id="editor"></div>
 </div>
 <div class="chat-instruction">
     <div>Chat here</div>
