here we are close to a working editor. However it eats the last line....

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -46,7 +46,7 @@
 <!--        <a class="sidebar-button" href="/" id="reset-button">-->
 <!--            <i class="gg-add-r"></i>-->
 <!--        </a>-->
-        <a class="sidebar-button" href="/" id="toggle-button">
+        <a class="header-button" href="/" id="toggle-button">
             <i class="gg-math-plus"></i>
         </a>
     </div>
