V1 of canvas and thinking

--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -38,11 +38,15 @@
 <div class="main-content">
     <div class="header">
         <div>
-            <a class="header-button" href="#" id="sidebar-toggler">Sidebar</a>
-            <a class="header-button" href="/">
+            <a class="header-button" href="#" id="sidebar-toggler">
+                <i class="gg-menu"></i>
+            </a>
+            <a class="header-button" id="new-chat-button" href="/">
                 <i class="gg-math-plus"></i>
             </a>
-            <a class="header-button" href="#" id="right-panel-toggler">Toggle Right Panel</a>
+            <a class="header-button" href="#" id="right-panel-toggler">
+                <i class="gg-code"></i>
+            </a>
 
             <!--suppress HtmlUnknownAnchorTarget -->
             <a class="header-button" href="#popupSettings" id="settings-button">Settings</a>&nbsp;
