--- a/server/static/main.css
+++ b/server/static/main.css
@@ -36,7 +36,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background: #ddd;
+    /*background: #ddd;*/
     height: 50px; /* Ensuring equal height */
 }
 
@@ -64,12 +64,13 @@ body {
     justify-content: space-between;
     align-items: center;
 
-    background: #ccc;
+    /*background: #ccc;*/
     flex-shrink: 0;
     /*height: 50px; !* Ensuring equal height *!*/
 }
 .header {
     padding: 10px;
+    border-bottom: 1px solid #f2f2f2;
 }
 
 
@@ -92,7 +93,7 @@ body {
     flex: 1;
     /*overflow-y: auto;*/
     /*padding: 10px;*/
-    background: #eaeaea;
+    /*background: #eaeaea;*/
     flex-basis: 100%;
     position: relative;
     /*border: 1px saddlebrown solid;*/
@@ -116,15 +117,16 @@ body {
     overflow-x: auto;
     overflow-y: auto;
     /*padding: 10px;*/
-    background: #dcdcdc;
+    /*background: #dcdcdc;*/
     white-space: nowrap;
     flex-basis: 67%;
     transition: transform 0.3s ease-in-out;
     display: none;
     height: calc(100vh - 50px - 64px - 20px);
+  border-left: 1px solid #f2f2f2;
 }
 codecanvas {
-    /*display: none;*/
+    display: none;
     /*visibility: hidden;*/
 }
 .footer {
@@ -672,17 +674,25 @@ button:disabled {
 
 
 .header-button {
-    display: inline-block;
+    /*display: inline-block;*/
+    display: inline-flex;
     /*margin-left: 12px;*/
     /*font-weight: normal;*/
     /*padding: 3px;*/
     /*font-size: smaller;*/
     /*opacity: 0.5;*/
     text-decoration: none;
-    margin-right: 10px;
+    margin-right: 20px;
     color: unset;
+    margin-bottom: 4px;
 }
-
+#right-panel-toggler {
+    /*width: 20px;*/
+    /*height: 20px;*/
+}
+#settings-button {
+    /*margint-top: 0px*/
+}
 .header-button:hover {
     opacity: 1.0;
 
@@ -713,7 +723,8 @@ button:disabled {
 }
 
 #history a {
-    color: rgb(183, 183, 193);
+    color: rgb(93, 93, 94);
+    text-decoration: none;
 }
 
 #history li {
@@ -749,6 +760,7 @@ button:disabled {
 
 .delete-history-item {
     margin-left: auto;
+    margin-right: 4px;
     border: none;
     background-color: unset;
     color: rgb(183, 183, 193);
@@ -872,12 +884,12 @@ div.menu-collection-link-container:hover .delete-collection-item {
     width: calc(100% - 20px);
 }
 
-/*.scroll-content {*/
+.scroll-content {
 
-/*    !*max-height: 80vh;*!*/
-/*    overflow: scroll;*/
-/*    max-height: 70vh;*/
-/*}*/
+    /*max-height: 80vh;*/
+    overflow: scroll;
+    max-height: 70vh;
+}
 
 .popup {
     margin: 70px auto;
@@ -1082,8 +1094,39 @@ input[type="number"]::-webkit-outer-spin-button {
 
 
 #logout-button {
-    border: 0;
+    /*border: 0;*/
+    position: relative;
+    top: 3px;
 }
+
+.gg-code {
+  /*transform: scale(var(--ggs, 1));*/
+}
+.gg-code,
+.gg-code::after,
+.gg-code::before {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  width: 8px;
+  height: 20px;
+}
+.gg-code::after,
+.gg-code::before {
+  content: "";
+  position: absolute;
+  height: 8px;
+  border-left: 2px solid;
+  border-bottom: 2px solid;
+  transform: rotate(45deg) scaleY(1);
+  left: -4px;
+  top: 6px;
+}
+.gg-code::after {
+  transform: rotate(-45deg) scaleX(-1);
+  left: 4px;
+}
+
 
 .gg-add-r {
     box-sizing: border-box;
@@ -1115,6 +1158,161 @@ input[type="number"]::-webkit-outer-spin-button {
     height: 10px;
     top: 4px;
     left: 8px;
+}
+
+
+#sidebar-toggler {
+    position: relative;
+    bottom: 5px;
+}
+#new-chat-button {
+    position: relative;
+    bottom: 5px;
+}
+#right-panel-toggler {
+    position: relative;
+    top: 4px;
+}
+.gg-file-document {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  /*transform: scale(var(--ggs, 1));*/
+  width: 14px;
+  height: 16px;
+  border: 2px solid transparent;
+  border-right: 0;
+  border-top: 0;
+  box-shadow: 0 0 0 2px;
+  border-radius: 1px;
+  border-top-right-radius: 4px;
+  overflow: hidden;
+}
+.gg-file-document::after,
+.gg-file-document::before {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+}
+.gg-file-document::before {
+  background: currentColor;
+  box-shadow:
+    0 4px 0,
+    -6px -4px 0;
+  left: 0;
+  width: 10px;
+  height: 2px;
+  top: 8px;
+}
+.gg-file-document::after {
+  width: 6px;
+  height: 6px;
+  border-left: 2px solid;
+  border-bottom: 2px solid;
+  right: -1px;
+  top: -1px;
+}
+.gg-arrow-left-r {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  width: 22px;
+  height: 22px;
+  border: 2px solid;
+  /*transform: scale(var(--ggs, 1));*/
+  border-radius: 4px;
+}
+.gg-arrow-left-r::after,
+.gg-arrow-left-r::before {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  left: 4px;
+}
+.gg-arrow-left-r::after {
+  width: 6px;
+  height: 6px;
+  border-bottom: 2px solid;
+  border-left: 2px solid;
+  transform: rotate(45deg);
+  bottom: 6px;
+}
+.gg-arrow-left-r::before {
+  width: 10px;
+  height: 2px;
+  bottom: 8px;
+  background: currentColor;
+}
+
+.gg-arrow-right-r {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  width: 22px;
+  height: 22px;
+  border: 2px solid;
+  /*transform: scale(var(--ggs, 1));*/
+  border-radius: 4px;
+}
+.gg-arrow-right-r::after,
+.gg-arrow-right-r::before {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  right: 4px;
+}
+.gg-arrow-right-r::after {
+  width: 6px;
+  height: 6px;
+  border-top: 2px solid;
+  border-right: 2px solid;
+  transform: rotate(45deg);
+  bottom: 6px;
+}
+.gg-arrow-right-r::before {
+  width: 10px;
+  height: 2px;
+  bottom: 8px;
+  background: currentColor;
+}
+
+
+
+.gg-terminal {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  /*transform: scale(var(--ggs, 1));*/
+  width: 24px;
+  height: 20px;
+  border: 2px solid;
+  border-radius: 2px;
+}
+.gg-terminal::after,
+.gg-terminal::before {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+}
+.gg-terminal::before {
+  border-right: 2px solid;
+  border-bottom: 2px solid;
+  transform: rotate(-45deg);
+  width: 6px;
+  height: 6px;
+  top: 5px;
+  left: 3px;
+}
+.gg-terminal::after {
+  width: 4px;
+  height: 2px;
+  background: currentColor;
+  top: 10px;
+  left: 11px;
 }
 
 .gg-log-out::after {
@@ -1267,6 +1465,29 @@ input[type="number"]::-webkit-outer-spin-button {
     inset -2px 0 0
 }
 
+.gg-menu {
+  /*transform: scale(var(--ggs, 1));*/
+}
+.gg-menu,
+.gg-menu::after,
+.gg-menu::before {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  width: 20px;
+  height: 2px;
+  border-radius: 3px;
+  background: currentColor;
+}
+.gg-menu::after,
+.gg-menu::before {
+  content: "";
+  position: absolute;
+  top: -6px;
+}
+.gg-menu::after {
+  top: 6px;
+}
 
 .gg-attachment {
     box-sizing: border-box;
