generic renderer for everything

--- a/server/static/main.css
+++ b/server/static/main.css
@@ -1746,3 +1746,6 @@ details[open] > summary::before {
     /*border: 1px solid crimson;*/
     /*width: 50%;*/
 }
+.katex-html {
+    display: none;
+}
