--- a/server/templates/new.html
+++ b/server/templates/new.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href='/static/main.css'/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{name}}{{name2}}</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/codemirror.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/javascript/javascript.min.js"></script>
+<!--    <script src="/static/js/codemirror.min.js"></script>-->
+<!--    <script src="/static/js/javascript.min.js"></script>-->
 
 </head>
 <body>
