--- a/server/static/main.css
+++ b/server/static/main.css
@@ -86,19 +86,36 @@ body {
 .content {
     flex: 1;
     display: flex;
-    overflow: hidden;
+    /*overflow: hidden;*/
+    /*width: calc(100vw - 300px);*/
+    transition: all 0.3s ease-in-out; /* Smooth transitions */
 }
 
 .left-panel {
-    flex: 1;
-    /*overflow-y: auto;*/
-    /*padding: 10px;*/
-    /*background: #eaeaea;*/
-    flex-basis: 100%;
-    position: relative;
-    /*border: 1px saddlebrown solid;*/
+    /*flex-grow: 1;*/
+    transition: width 0.3s ease-in-out;
+    /*position: relative;*/
     height: calc(100vh - 50px - 64px - 20px);
+    max-width: 100%;
+    width: 33%;
+    flex: 1 1 33vw;
+
 }
+
+.right-panel {
+    flex: 1 1 66vw;
+    width: 67%;
+    display: none; /* Default: Hidden */
+    overflow-x: auto;
+    overflow-y: auto;
+    white-space: nowrap;
+    transition: transform 0.3s ease-in-out;
+
+    height: calc(100vh - 50px - 64px - 20px);
+    border-left: 1px solid #f2f2f2;
+}
+
+
 
 .toggle-right-panel-button {
     position: absolute;
@@ -112,19 +129,6 @@ body {
     border-radius: 5px;
 }
 
-.right-panel {
-    flex: 2;
-    overflow-x: auto;
-    overflow-y: auto;
-    /*padding: 10px;*/
-    /*background: #dcdcdc;*/
-    white-space: nowrap;
-    flex-basis: 67%;
-    transition: transform 0.3s ease-in-out;
-    display: none;
-    height: calc(100vh - 50px - 64px - 20px);
-  border-left: 1px solid #f2f2f2;
-}
 codecanvas {
     display: none;
     /*visibility: hidden;*/
@@ -247,14 +251,23 @@ codecanvas {
 pre {
     margin-top: 0;
     position: relative;
+    max-width: 100%; /* Ensure it does not exceed its container */
+    width: 100%; /* Makes it responsive to container width */
+    overflow-x: auto; /* Enables horizontal scrolling */
+    white-space: pre; /* Prevents text wrapping */
+    display: block;
+    box-sizing: border-box;
 }
 
 
-pre code {
-    padding-top: 0;
-    border-bottom-left-radius: 2px;
-    border-bottom-right-radius: 2px;
-}
+
+/*pre code {*/
+    /*max-width: 50%;*/
+    /*display: block;*/
+    /*padding-top: 0;*/
+    /*border-bottom-left-radius: 2px;*/
+    /*border-bottom-right-radius: 2px;*/
+/*}*/
 
 
 .code-block {
@@ -271,6 +284,7 @@ pre code {
     margin-top: 4px;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
+    /*max-width: 100%;*/
 }
 
 
@@ -539,9 +553,9 @@ button:disabled {
 /*    }*/
 /*}*/
 
-/*a {*/
-/*    text-decoration: none;*/
-/*}*/
+a {
+    text-decoration: none;
+}
 
 /*a:visited {*/
 /*    color: rgb(93, 65, 178);*/
@@ -938,12 +952,16 @@ div.menu-collection-link-container:hover .delete-collection-item {
     overflow: auto;
 }
 
-
+/*pre { overflow-x: auto; }*/
 pre code.hljs {
-    display: block;
+    /*display: block;*/
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     font-size: 0.9rem;
+    display: block;
+    /*width: 333px;*/
+
+    /*white-space: pre-wrap;*/
 }
 
 
